fix visibility of svgInput component

--- a/assets/scss/components/forms.scss
+++ b/assets/scss/components/forms.scss
@@ -164,7 +164,6 @@ textarea.c-input {
   input {
     width: 0;
     height: 0;
-    visibility: hidden;
     opacity: 0;
     pointer-events: none;
     &:checked {
